# tracklist-to-spotify

./: .gitignore  README.md  pyproject.toml
tests/providers/1001tracklist/: sample_response.html  test_tracklists_logic.py
tests/providers/trackid/: sample_response.json  test_trackid.py
tracklist_to_spotify/: run.py
tracklist_to_spotify/downloaders/: registry.py
tracklist_to_spotify/downloaders/spotdl/: __init__.py  run.py
tracklist_to_spotify/providers/: registry.py
tracklist_to_spotify/providers/one_thousand_one_tracklists/: __init__.py  run.py
tracklist_to_spotify/providers/trackid/: __init__.py  trackid.py  types.py
tracklist_to_spotify/publishers/: registry.py  types.py
tracklist_to_spotify/publishers/spotify_import/: __init__.py  run.py  types.py
