[project]
name = "tracklist-to-spotify"
version = "0.0.1"
description = "Convert a tracklist to a Spotify playlist"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "pytest-mock",
    "pandas",
    "tyro",
    "requests",
    "loguru",
    "tqdm",
    "spotipy",
    "python-dotenv",
    "tenacity",
    "bs4",
]

[tool.uv]
dev-dependencies = ["pytest"]

[project.scripts]
import_tracklist = "tracklist_to_spotify.run:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
